# raytracing-voxel-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test_shader.fragment  test_shader.vertex
#old/shaders/: raytrace_light_pass.compute  raytrace_screen_pass.compute  texture.frag  texture.vert
#old/source/: engine.cpp  engine.h  main.cpp
#old/source/common/: chunk_pos.cpp  chunk_pos.h  color.cpp  simple-profiler.h  thread_utils.cpp
#old/source/engine/: baking_utils.cpp  baking_utils.h  chunk_handler.cpp  chunk_handler.h  (+4 more)
models/vox/: tree.vox
shaders/: bake_chunk.compute  basic_shader.frag  basic_shader.vert  basic_texture.frag  basic_texture.vert  common.inc  engine.json  preraytrace_validate.compute  presets.json  process_soft_shadow.frag  process_soft_shadow.fragment  raytrace.compute  raytrace.frag  raytrace.fragment  raytrace_buffer_pass.compute  raytrace_combine_pass.frag  raytrace_light_pass.compute  raytrace_screen_pass.compute  texture.vertex  time-compute.inc  util.inc
shaders/buffer/: spatial_buffer.inc  spatial_buffer_pass.compute  spatial_buffer_postprocess.compute  spatial_buffer_prepare.compute  spatial_buffer_reset.compute
shaders/postprocess/: lightmap_blur_pass.compute  lightmap_interpolate_pass.compute  raytrace_combine_pass.frag  raytrace_output_pass.frag
shaders/raytrace/: blending.inc  camera.inc  debug.inc  lighting.inc  material.inc  raycast.inc  screen_pass.compute  types.inc
source/: main.cc  main.cpp
source/common/: chunk_pos.cpp  chunk_pos.h  color.h  queue.h  simple-profiler.h  thread_utils.h  types.h  vec.cpp  vec.h  worker_thread.cpp  worker_thread.h
source/engine/: baking_utils.h  chunk_buffer_pool.cpp  chunk_buffer_pool.h  chunk_buffers.cpp  chunk_buffers.h  chunk_source.cpp  chunk_source.h  gpu_cache.cpp  gpu_cache.h  voxel_chunk.cpp  voxel_chunk.h  voxel_palette.cpp
source/renderer/: camera.cpp  camera.h  render_chunk.cpp  render_chunk.h  render_engine.cpp  render_engine.h  util.cpp  util.h
source/voxel/: app.cc  app.h  premade.cc  premade.h
(+104 files in other folders)
